--- a/ui5app/webapp/i18n/i18n.properties
+++ b/ui5app/webapp/i18n/i18n.properties
@@ -3,9 +3,27 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=ui5app
+appTitle=Hansen UI5
 
 #YDES: Application description
 appDescription=ui5app description
 #XTIT: Main view title
-title=ui5app
+title=VKB 
+
+#Home Tiles
+home=Welcome to Insurance Manager
+createNewInsurance= Create Insurance
+subtitle= Go To Create
+showInsurances=Show All Insurances
+subtitle2= Insurances List
+
+
+# Nav Button
+goBackToHome= Home
+
+#Insurance List
+insuranceNumber = Policy Number
+insuranceHolder = Holder
+insuranceType = Type
+dateOfCreation = Signed at
+dateOfValid = Valid until
